--- a/web/static/admin/css/hou.css
+++ b/web/static/admin/css/hou.css
@@ -260,3 +260,8 @@ body {
 .login-box .login-logo {text-align:center}
 .login-box .login-logo img {height:80px;}
 .login-box .login-box-c {background:#FFFFFF;padding:15px;}
+
+/*custom*/
+.ui.grid+.grid {
+     margin-top: 0!important;
+}
