--- a/web/static/home/css/index.css
+++ b/web/static/home/css/index.css
@@ -162,7 +162,10 @@ div.ui.container{
     color: #999;
     text-indent: 2em;
 }
-#content .meta{}
+#content .meta{
+    display: inline-block;
+    vertical-align: middle;
+}
 #content .meta img{
     height: 20px;
     width: 20px;
@@ -183,8 +186,11 @@ div.ui.container{
     line-height: 9px;
     color: #DB2828!important;
     border:1px solid #DB2828!important;
-    padding: 3px 8px;
+    padding: 4px 8px;
     border-radius: 10px;
+    display: inline-block;
+    vertical-align: top;
+
 }
 #content .meta .wemedia-green{
     color: green!important;
@@ -239,4 +245,14 @@ div.ui.container{
 .pane-wrap .pane .pane-btn{
     margin-top: 12%;
     text-align: center;
+}
+#content .ui.card.topic_card,
+#content .ui.cards.topic_cards>.card{
+    width: 206px !important;
+}
+.ui.card.topic_card .header,
+.ui.card.topic_card .description{
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
